# ENG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup_info.h
src/engine/: engine.cpp  window.cpp
src/game/: asset_manager.cpp  entity_manager.cpp  map_manager.cpp
src/game/entity/: entity_component.cpp
src/game/entity/components/: collider.cpp  path_finding.cpp  sprite.cpp  transform.cpp
src/game/grid_map/: grid_map.cpp
src/include/engine/: engine.h  window.h
src/include/game/: asset_manager.h  entity_manager.h  map_manager.h
src/include/game/entity/: entity_component.h
src/include/game/entity/components/: collider.h  path_finding.h  sprite.h  transform.h
src/include/game/grid_map/: grid_map.h
src/include/util/: asset_util.h  sdl_util.h  vec2.h
src/main/: main.cpp
src/util/: asset_util.cpp  sdl_util.cpp
